force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/ampi__Project_Indicator_Reporting_Period__c.object-meta.xml
<CustomObject>
    <description>A period of time for which a project indicator has targets set and results reported</description>
    <label>Project Indicator Reporting Period</label>
    <nameField>
        <displayFormat>PIRP-{0000}</displayFormat>
        <label>Project Indicator Reporting Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Indicator Reporting Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>