force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/ampi__Data_Tracked__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Tracked__c</fullName>
    <description>Picklist field to track what kind of data is being tracked for a project indicator within a particular reporting period</description>
    <label>Data Tracked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Result</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>