force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/ampi__Label__c.field-meta.xml
<CustomField>
    <fullName>ampi__Label__c</fullName>
    <description>[Not in Use - Candidate for Deprecation]</description>
    <label>Reporting Period Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>