force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/ampi__Parent_Label__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Label__c</fullName>
    <description>Formula field to populate with value of Reporting Period Name field on parent Reporting Period record.</description>
    <formula>ampi__Reporting_Period__r.ampi__Label_Translated__c</formula>
    <label>Reporting Period Name</label>
    <type>Text</type>
</CustomField>