force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/ampi__Parent_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Report_Type__c</fullName>
    <description>Formula field to populate with value of Report Type field on parent Reporting Period record.</description>
    <formula>TEXT(ampi__Reporting_Period__r.ampi__Report_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Type</label>
    <type>Text</type>
</CustomField>