force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/ampi__Parent_Reporting_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Reporting_Period_Start_Date__c</fullName>
    <description>Formula field to populate with value of Reporting Period Start Date field on parent Reporting Period record.</description>
    <formula>ampi__Reporting_Period__r.ampi__Reporting_Period_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period Start Date</label>
    <type>Date</type>
</CustomField>