force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/ampi__Report_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Report_Type__c</fullName>
    <description>[Not in Use - Candidate for Deprecation]</description>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Life of Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>