force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/ampi__Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the parent reporting period</description>
    <label>Reporting Period</label>
    <referenceTo>ampi__Reporting_Period__c</referenceTo>
    <relationshipLabel>Project Indicator Reporting Periods</relationshipLabel>
    <relationshipName>Project_Indicator_Reporting_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>