force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/ampi__Reporting_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period_End_Date__c</fullName>
    <description>[Not in Use - Candidate for Deprecation]</description>
    <label>Reporting Period End Date</label>
    <type>Date</type>
</CustomField>