force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/fields/Data_Tracked_Formula__c.field-meta.xml
<CustomField>
    <fullName>Data_Tracked_Formula__c</fullName>
    <formula>IF(
NOT(ISPICKVAL(ampi__Project_Indicator__r.ampi__Target_Frequency__c, &quot;&quot;)) &amp;&amp; NOT(ISPICKVAL(ampi__Project_Indicator__r.ampi__Reporting_Frequency__c, &quot;&quot;)), &quot;Both&quot;, 
IF(
ISPICKVAL(ampi__Project_Indicator__r.ampi__Target_Frequency__c, &quot;&quot;) &amp;&amp; NOT(ISPICKVAL(ampi__Project_Indicator__r.ampi__Reporting_Frequency__c, &quot;&quot;)), &quot;Result&quot;,
IF( 
NOT(ISPICKVAL(ampi__Project_Indicator__r.ampi__Target_Frequency__c, &quot;&quot;)) &amp;&amp; ISPICKVAL(ampi__Project_Indicator__r.ampi__Reporting_Frequency__c, &quot;&quot;), &quot;Target&quot;, &quot;&quot;)))</formula>
    <label>Data Tracked (Formula)</label>
    <type>Text</type>
</CustomField>