force-app/main/default/objects/ampi__Project_Indicator_Reporting_Period__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ampi__Project_Indicator__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ampi__Report_Type__c</columns>
    <columns>ampi__Parent_Report_Type__c</columns>
    <columns>ampi__Label__c</columns>
    <columns>ampi__Reporting_Period__c</columns>
    <columns>ampi__Parent_Label__c</columns>
    <columns>ampi__Data_Tracked__c</columns>
    <columns>ampi__Parent_Reporting_Period_Start_Date__c</columns>
    <columns>ampi__Parent_Reporting_Period_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Reporting_Period__c</field>
        <operation>equals</operation>
        <value>RP-32652</value>
    </filters>
    <label>All</label>
</ListView>